Fix mail label-picker position on mobile

--- a/assets/css/cmps/LabelPicker.css
+++ b/assets/css/cmps/LabelPicker.css
@@ -54,7 +54,7 @@
 }
 
 @media (max-width: 600px) {
-    .label-picker-container .label-picker-dropdown {
+    .mail-list .label-picker-container .label-picker-dropdown {
         right: auto;
         left: 0;
     }
